--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -40,7 +40,7 @@ jobs:
     - name: cache executed notebooks
       uses: actions/cache@v3
       with:
-        path: _build/.jupyter_cache
+        path: FIN124_JB/_build/.jupyter_cache
         key: jupyter-book-cache-${{ hashFiles('requirements.txt') }}
 
     # Build the book
