--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -11,7 +11,7 @@ on:
     # folder has been modified.
     #
     paths:
-     - FIN124_JB/**
+     - 'FIN124_JB/**'
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
